# gerador_relatorio_vendas

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
tests/: test_cli.py  test_core.py  test_output.py  test_parser.py  vendas_test.csv
vendas_cli/: cli.py  core.py  output.py  parser.py
