[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vendas_cli"
version = "0.1.0"
description = "Uma CLI para processar arquivos CSV de vendas e gerar relatórios."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Jose Jonatas", email = "josejonatasoliveira.jjo@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
dependencies = [
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
vendas-cli = "vendas_cli.cli:main"